--- a/package.json
+++ b/package.json
@@ -33,5 +33,6 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16",
     "vite": "^4.4.5"
-  }
+  },
+  "homepage": "https://gersonjuniordev.github.io/portfolio-gerson"
 }
