--- a/package.json
+++ b/package.json
@@ -34,5 +34,5 @@
     "tailwindcss": "^3.4.16",
     "vite": "^4.4.5"
   },
-  "homepage": "https://gersonjuniordev.github.io/portfolio-gerson"
+  "homepage": "https://gersonjuniordev.github.io/portfolio-gerson/#"
 }
